syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AvatarTeam.proto";

message AvatarTeamUpdateNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1713;
  }

  map<uint32, AvatarTeam> avatar_team_map = 6;
  repeated uint64 temp_avatar_guid_list = 9;
}
