syntax = "proto3";

package proto;
option go_package = "./;proto";


message ChangeGameTimeReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 149;
  }

  uint32 game_time = 9;
  bool is_force_set = 7;
  uint32 extra_days = 6;
}
