syntax = "proto3";

package proto;
option go_package = "./;proto";

import "DealAddFriendResultType.proto";

message DealAddFriendReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 4085;
  }

  uint32 target_uid = 7;
  DealAddFriendResultType deal_add_friend_result = 1;
}
