syntax = "proto3";

package proto;
option go_package = "./;proto";


message GetAllUnlockNameCardRsp {
  enum CmdId {
    option allow_alias = true;
    ENET_CHANNEL_ID = 0;
    NONE = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 4076;
  }

  int32 retcode = 1;
  repeated uint32 name_card_list = 2;
}
