syntax = "proto3";

package proto;
option go_package = "./;proto";


message HostPlayerNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 341;
  }

  uint32 host_uid = 10;
  uint32 host_peer_id = 7;
}
