syntax = "proto3";

package proto;
option go_package = "./;proto";


message PlayerGameTimeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 155;
  }

  uint32 game_time = 7;
  uint32 uid = 13;
  bool is_home = 12;
}
