syntax = "proto3";

package proto;
option go_package = "./;proto";


message PlayerGetForceQuitBanInfoRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 4162;
  }

  int32 retcode = 11;
  uint32 match_id = 8;
  uint32 expire_time = 5;
}
