syntax = "proto3";

package proto;
option go_package = "./;proto";

import "StoreType.proto";
import "Item.proto";

message PlayerStoreNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 609;
  }

  StoreType store_type = 4;
  repeated Item item_list = 3;
  uint32 weight_limit = 15;
}
