syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PlayerLocationInfo.proto";
import "VehicleLocationInfo.proto";

message ScenePlayerLocationNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_IS_RELIABLE = 1;
    ENET_CHANNEL_ID = 1;
    CMD_ID = 224;
  }

  uint32 scene_id = 1;
  repeated PlayerLocationInfo player_loc_list = 2;
  repeated VehicleLocationInfo vehicle_loc_list = 3;
}
