syntax = "proto3";

package proto;
option go_package = "./;proto";

import "SceneTeamAvatar.proto";

message SceneTeamUpdateNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1699;
  }

  repeated SceneTeamAvatar scene_team_avatar_list = 11;
  bool is_in_mp = 1;
}
