syntax = "proto3";

package proto;
option go_package = "./;proto";


message SceneTimeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 230;
  }

  uint32 scene_id = 1;
  bool is_paused = 2;
  uint64 scene_time = 3;
}
