syntax = "proto3";

package proto;
option go_package = "./;proto";

import "Birthday.proto";

message SetPlayerBirthdayRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 4030;
  }

  int32 retcode = 12;
  Birthday birthday = 14;
}
