syntax = "proto3";

package proto;
option go_package = "./;proto";

import "TeamEntityInfo.proto";

message SyncTeamEntityNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 334;
  }

  uint32 scene_id = 13;
  repeated TeamEntityInfo team_entity_info_list = 2;
}
